fixed the card spacing, added containers to the application.html.erb, fixed the footer, removed p padding 0, changed alert

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,7 @@
 $bg: #FEF5DF;
 
 .grannies-title {
-  margin: 5px 0;
+  padding: 5px 0;
   background-color: #C4A5A0;
   font-family: 'Oleo Script';
 }
