--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,6 @@
   justify-content: space-between;
   padding: 0px 50px;
   color: #FFFFFF;
-  position: absolute;
   height: 72px;
   left: 0px;
   top: 1655px;
@@ -31,4 +30,15 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 41px;
+}
+
+
+.page-container {
+  display:grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
+}
+
+.footer-container {
+  padding-top: 5%;
 }
